# REplace-challenge

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  seeder_main.py
backend/src/: crud.py  models.py  schemas.py
backend/src/database/: postgres.py
backend/src/routers/: mock_projects.py  projects.py
backend/src/seeder/: project.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: index.css  main.jsx
frontend/src/components/: Button.tsx  FilterButton.tsx  Inputs.tsx  RadioInputs.tsx  Tooltip.tsx  TopBar.tsx
frontend/src/pages/projectTablePage/: FilterButton.tsx  ProjectListView.tsx  ProjectMapView.tsx  index.tsx
frontend/src/redux/: actions.ts  reducer.ts  sagas.ts  store.ts
frontend/src/routes/: MainLayout.tsx  index.tsx
frontend/src/types/: project.ts
frontend/src/utils/: Api.ts  TextUtils.ts
