[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "GusGonzalez",email = "Gegf1234@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "faker (>=37.1.0,<38.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"
httpx = "^0.28.1"

